fix alignment for ie7

--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -1,8 +1,12 @@
 body {
   margin: 0;
   margin-top: 30px;
+  width: 600px;
+  margin-left: auto;
+  margin-right: auto;
   padding: 0;
   font-family: Helvetica;
+  text-align: center;
 }
 
 body.gray {
@@ -66,9 +70,11 @@ div.vote {
   text-align: center;
 }
 
-div.results {
+div.container {
   width: 600px;
-  margin: 0 auto;
+  margin-top 0;
+  margin-left: auto;
+  margin-right: auto;
   text-align: center;
 }
 
